# tiralabra

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  coverage.xml  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikko1.md
dokumentaatio/viikkoraportit/: viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: board.py  game.py  load_image.py  main.py  screen.py  two_player.py
src/UI/: game_ui.py  menu_ui.py
src/files/: game.py  game_logic.py  game_runner.py  menu.py  minimax.py  multiplayer.py  singleplayer.py  two_player.py
src/tests/: game_runner_test.py  gamelogic_test.py  minimax_test.py  multiplayer_test.py  singleplayer_test.py
