[tool.poetry]
name = "tiraprojekti"
version = "0.1.0"
description = ""
authors = ["mirelle01 <lybackmirelle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
pygame = "^2.3.0"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
